revert the SetDefaultProvider